<resources>
    <string name="app_name">FD Wallet</string>
    <string name="db_password" translatable="false">wannabit</string>
    <string name="url_moon_pay" translatable="false">https://buy.moonpay.io</string>
    <string name="url_station_old" translatable="false">https://api-wallet.cosmostation.io/</string>
    <string name="url_station" translatable="false">https://api-utility.cosmostation.io/</string>
    <string name="url_station_testnet" translatable="false">https://api-office.cosmostation.io/utility/</string>
    <string name="url_mintscan" translatable="false">https://api.mintscan.io/</string>
    <string name="url_lcd_kava_main" translatable="false">https://lcd-kava-app.cosmostation.io/</string>
    <string name="url_lcd_certik_main" translatable="false">https://lcd-certik-app.cosmostation.io/</string>
    <string name="url_main_bnb" translatable="false">https://dex.binance.org/</string>
    <string name="url_lcd_ok" translatable="false">https://exchainrpc.okex.org/okexchain/v1/</string>
    <string name="url_api_ok" translatable="false">https://www.oklink.com/api/explorer/</string>
    <string name="url_api_airdrop_desmos" translatable="false">https://api.airdrop.desmos.network/</string>
    <string name="url_hdac_mainnet" translatable="false">https://insight-api.rizon.world/insight-api/</string>
    <string name="url_rizon_swap_status_mainnet" translatable="false">https://swap-api.rizon.world/</string>
    <string name="url_hdac_testnet" translatable="false">https://insight-api.testnet.rizon.world/insight-api/</string>
    <string name="url_rizon_swap_status_testnet" translatable="false">https://swap-api.testnet.rizon.world/</string>
    <string name="url_hdac" translatable="false">https://wallet.new.hdactech.com/insight-api/</string>
    <string name="key_mnemonic" translatable="false">MNEMONIC_KEY</string>
    <string name="key_private" translatable="false">PRIVATE_KEY</string>
    <string name="key_password" translatable="false">PASSWORD_KEY</string>
    <string name="str_atom_c" translatable="false">ATOM</string>
    <string name="str_imversed_c" translatable="false">IMV</string>
    <string name="str_iris_c" translatable="false">IRIS</string>
    <string name="str_photon_c" translatable="false">PHOTINO</string>
    <string name="str_kava_c" translatable="false">KAVA</string>
    <string name="str_iov_c" translatable="false">IOV</string>
    <string name="str_band_c" translatable="false">BAND</string>
    <string name="str_ok_c" translatable="false">OKT</string>
    <string name="str_bnb_c" translatable="false">BNB</string>
    <string name="str_btc_c" translatable="false">BTC</string>
    <string name="str_ctk_c" translatable="false">CTK</string>
    <string name="str_scrt_c" translatable="false">SCRT</string>
    <string name="str_akt_c" translatable="false">AKT</string>
    <string name="str_xprt_c" translatable="false">XPRT</string>
    <string name="str_dvpn_c" translatable="false">DVPN</string>
    <string name="str_fet_c" translatable="false">FET</string>
    <string name="str_cro_c" translatable="false">CRO</string>
    <string name="str_sif_c" translatable="false">ROWAN</string>
    <string name="str_ki_c" translatable="false">XKI</string>
    <string name="str_rizon_c" translatable="false">ATOLO</string>
    <string name="str_medi_c" translatable="false">MED</string>
    <string name="str_althea_c" translatable="false">ALTG</string>
    <string name="str_osmosis_c" translatable="false">OSMO</string>
    <string name="str_uion_c" translatable="false">ION</string>
    <string name="str_umee_c" translatable="false">UMEE</string>
    <string name="str_ngm_c" translatable="false">NGM</string>
    <string name="str_axl_c" translatable="false">AXL</string>
    <string name="str_juno_c" translatable="false">JUNO</string>
    <string name="str_regen_c" translatable="false">REGEN</string>
    <string name="str_bitcanna_c" translatable="false">BCNA</string>
    <string name="str_stargaze_c" translatable="false">STARS</string>
    <string name="str_grabridge_c" translatable="false">GRAVITON</string>
    <string name="str_comdex_c" translatable="false">CMDX</string>
    <string name="str_inj_c" translatable="false">INJ</string>
    <string name="str_bitsong_c" translatable="false">BTSG</string>
    <string name="str_desmos_c" translatable="false">DSM</string>
    <string name="str_lum_c" translatable="false">LUM</string>
    <string name="str_chihuahua_c" translatable="false">HUAHUA</string>
    <string name="str_konstellation_c" translatable="false">DARC</string>
    <string name="str_evmos_c" translatable="false">EVMOS</string>
    <string name="str_cudos_c" translatable="false">CUDOS</string>
    <string name="str_provenance_c" translatable="false">HASH</string>
    <string name="str_cerberus_c" translatable="false">CRBRUS</string>
    <string name="str_omniflix_c" translatable="false">FLIX</string>
    <string name="str_muon_c" translatable="false">MUON</string>
    <string name="str_bif_c" translatable="false">BIF</string>
    <string name="str_create_swap_memo_c" translatable="false">Create Atomic Swap via FD Wallet</string>
    <string name="str_claim_swap_memo_c" translatable="false">Claim Atomic Swap via FD Wallet</string>
    <string name="str_refund_swap_memo_c" translatable="false">Refund Atomic Swap via FD Wallet</string>
    <string name="str_cosmos_time_format" translatable="false">yyyy-MM-dd<![CDATA["'"]]>T<![CDATA["'"]]>HH:mm:ss.SSS</string>
    <string name="str_block_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSSSSSSSS\'Z\']]></string>
    <string name="str_tx_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss\'Z\']]></string>
    <string name="str_vote_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\']]></string>
    <string name="str_coingecko" translatable="false">CoinGecko</string>
    <string name="str_coinmarketcap" translatable="false">CoinMarket Cap</string>
    <string name="moon_pay_public_key" translatable="false">pk_live_zbG1BOGMVTcfKibboIE2K3vduJBTuuCn</string>
    <string name="str_ok">OK</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_next">Next</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_settings">Settings</string>
    <string name="str_sorting">Sorting</string>
    <string name="str_edit">Edit</string>
    <string name="str_display_chains">Displayed Chains</string>
    <string name="str_hide_chains">Hidden Chains</string>
    <string name="str_restore_key">Restore With PrivateKey</string>
    <string name="str_qr">QrCode</string>
    <string name="str_import">Restore With Mnemonic</string>
    <string name="str_clear_all">Clear All</string>
    <string name="str_create">CREATE</string>
    <string name="str_check_mnemonic_c">CHECK MNEMONICS</string>
    <string name="str_check_private_key_c">CHECK PRIVATE KEY</string>
    <string name="str_start">START</string>
    <string name="str_check">Check</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_warning">Warning</string>
    <string name="str_enter_again">Enter Again</string>
    <string name="str_Ignore">Ignore</string>
    <string name="str_show_mnemonic">Show Mnemonic</string>
    <string name="str_create_wallet">Create Wallet</string>
    <string name="str_start_wallet">Start Wallet</string>
    <string name="str_import2">Restore with</string>
    <string name="str_mnemonic">Mnemonic</string>
    <string name="str_private_key">Private Key</string>
    <string name="str_watch">Watching only</string>
    <string name="str_address">Address</string>
    <string name="str_paste">Paste</string>
    <string name="str_send_c">SEND</string>
    <string name="str_htlc_send_c"><![CDATA[BEP3 Send & Claim]]></string>
    <string name="str_htlc_refund_c">BEP3 Refund</string>
    <string name="str_participate_incentive">Incentive Claim</string>
    <string name="str_receive_c">RECEIVE</string>
    <string name="str_send">Send</string>
    <string name="str_receive">Receive</string>
    <string name="str_change_reward_address_c">CHANGE REWARD ADDRESS</string>
    <string name="str_vote_c">VOTE</string>
    <string name="str_delegate_c">DELEGATE</string>
    <string name="str_undelegate_c">UNDELEGATE</string>
    <string name="str_redelegate_c">REDELEGATE</string>
    <string name="str_reinvest_c">RE-INVEST</string>
    <string name="str_before">Before</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_no_more_3day">Hide 3 days</string>
    <string name="str_continue">Continue</string>
    <string name="str_connect">Connect</string>
    <string name="str_wait">Wait</string>
    <string name="str_recipient_address">Recipient Address</string>
    <string name="str_starname_recipient_address">StarName or Recipient Address</string>
    <string name="str_recipient_chain">Recipient Chain</string>
    <string name="str_claim_address">Claim Address</string>
    <string name="str_done">Done</string>
    <string name="str_dismiss">Dismiss</string>
    <string name="str_explorer">Explorer</string>
    <string name="str_memo">Memo</string>
    <string name="str_fees">Fee</string>
    <string name="str_fees_c">FEE</string>
    <string name="str_to_send_amount">Send Amount</string>
    <string name="str_expected_receive_amount">Final Receive Amount</string>
    <string name="str_relay_fee">Relay Fee</string>
    <string name="str_claim_fee">Claim Tx Fee</string>
    <string name="str_send_fee">Send Tx Fee</string>
    <string name="str_total_spend_amount">Total Spend</string>
    <string name="str_current_available">Current Available</string>
    <string name="str_remaining_available">Remaining Available Amount</string>
    <string name="str_from_c">FROM</string>
    <string name="str_to_c">TO</string>
    <string name="str_memo_c">MEMO</string>
    <string name="str_remind_balance">Remaining balance</string>
    <string name="str_to_undelegate_amount">Undelegate Amount</string>
    <string name="str_to_redelegate_amount">Redelegate Amount</string>
    <string name="str_to_delegate_amount">Delegate Amount</string>
    <string name="str_reinvest_amount">Reinvest Amount</string>
    <string name="str_to_delegate_validator">Delegate To</string>
    <string name="str_from_undelegate_validator">Undelegate From</string>
    <string name="str_from_redelegate_validator">Redelegate From</string>
    <string name="str_to_redelegate_validator">Redelegate To</string>
    <string name="str_undelegate_complete_time">Expected Delivery</string>
    <string name="str_remind_delegate">Remind Delegate</string>
    <string name="str_reward_c">CLAIM REWARD</string>
    <string name="str_reward_amount">Reward Amount</string>
    <string name="str_reward_from">Reward From</string>
    <string name="str_reward_to">Reward Recipient Address</string>
    <string name="str_wallet">Wallet</string>
    <string name="str_wallet_manage">Wallet Manage</string>
    <string name="str_general">General</string>
    <string name="str_app_applock">App Lock</string>
    <string name="str_app_applock_enabled">Enabled</string>
    <string name="str_currency">Currency</string>
    <string name="str_base_price">Base Price</string>
    <string name="str_support">Support</string>
    <string name="str_faq">FAQ</string>
    <string name="str_discord">Discord</string>
    <string name="str_app_info">App Info</string>
    <string name="str_term">Terms of Service</string>
    <string name="str_github">Open Source (GitHub)</string>
    <string name="str_version">Version</string>
    <string name="str_copy">Copy</string>
    <string name="str_add_new">Add New Wallet</string>
    <string name="str_create_warn1">Copy your mnemonics on a piece of paper and keep if in a secure location. You can recover your wallet using your mnemonics.</string>
    <string name="str_empty_key">-</string>
</resources>