<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/space_12"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginEnd="@dimen/space_12"
        android:layout_marginBottom="@dimen/space_16"
        android:orientation="vertical">

        <TextView
            style="@style/font_ss_11_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:text="@string/str_wallet" />

        <RelativeLayout
            android:id="@+id/addWalletButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_add_new" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/walletButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_wallet_manage" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />
        </RelativeLayout>

        <TextView
            style="@style/font_ss_11_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="@dimen/space_18"
            android:text="@string/str_general" />

        <RelativeLayout
            android:id="@+id/adblockButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_app_applock" />

            <ImageView
                android:id="@+id/arrow_applock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />

            <TextView
                android:id="@+id/appLockTextView"
                style="@style/font_ss_11_gray1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_4"
                android:layout_toStartOf="@+id/arrow_applock"
                android:text="@string/str_app_applock_enabled" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/currencyButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_currency" />

            <ImageView
                android:id="@+id/arrow_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />

            <TextView
                android:id="@+id/currencyTextView"
                style="@style/font_ss_11_gray1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_4"
                android:layout_toStartOf="@+id/arrow_currency"
                tools:text="USD" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_base_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="false"
            android:focusable="false">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_base_price" />

            <TextView
                android:id="@+id/base_price_text"
                style="@style/font_ss_11_gray1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_24"
                android:text="@string/str_coingecko" />
        </RelativeLayout>

        <TextView
            style="@style/font_ss_11_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="@dimen/space_18"
            android:text="@string/str_support" />

        <RelativeLayout
            android:id="@+id/guideButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_faq" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/discordButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_discord" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />
        </RelativeLayout>

        <TextView
            style="@style/font_ss_11_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:layout_marginTop="@dimen/space_18"
            android:text="@string/str_app_info" />

        <RelativeLayout
            android:id="@+id/termsButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_term" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/githubButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_github" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/versionButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_16"
            android:background="@drawable/box_trans_round"
            android:clickable="true"
            android:focusable="true">


            <TextView
                style="@style/font_ss_12_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_6"
                android:text="@string/str_version" />

            <ImageView
                android:id="@+id/arrow_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_next_gr" />

            <TextView
                android:id="@+id/version_text"
                style="@style/font_ss_11_gray1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_4"
                android:layout_toStartOf="@+id/arrow_version"
                tools:text="1.0.0" />
        </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
