<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fulldive.wallet.components.CustomImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/bg_cosmos" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_bar_height"
        android:background="@color/colorBlack"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/toolbarTitleTextView"
            style="@style/font_ssm_17_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_check_mnemonic_c" />
    </androidx.appcompat.widget.Toolbar>

    <com.fulldive.wallet.presentation.security.mnemonic.layout.MnemonicLayout
        android:id="@+id/mnemonicsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/space_12"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginEnd="@dimen/space_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layer"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_40">

        <ImageView
            android:id="@+id/create_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/warning_ic" />

        <TextView
            android:id="@+id/create_msg1"
            style="@style/font_ssm_17_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6"
            android:gravity="center"
            android:text="@string/str_warning" />

        <TextView
            android:id="@+id/create_msg2"
            style="@style/font_ss_12_gray1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_6"
            android:gravity="center"
            android:text="@string/str_create_warn1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:orientation="vertical">

        <Button
            android:id="@+id/copyButton"
            style="@style/font_ss_14_photon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:background="@drawable/btn_trans_with_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_copy"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/okButton"
            style="@style/font_ss_14_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_36"
            android:background="@drawable/btn_trans_with_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_ok"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>