<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_bar_height"
        android:background="@color/colorBlack"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/toolbarTitleTextView"
            style="@style/font_ssm_17_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_check_private_key_c" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/space_12"
        android:layout_marginEnd="@dimen/space_12"
        app:cardBackgroundColor="@color/colorTransBg"
        app:cardCornerRadius="@dimen/space_6"
        app:cardElevation="1.5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/privateKeyTextView"
            style="@style/font_ss_14_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:text="@string/str_empty_key" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_24"
        android:orientation="vertical">

        <Button
            android:id="@+id/copyButton"
            style="@style/font_ss_14_photon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:background="@drawable/btn_trans_with_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_copy"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/okButton"
            style="@style/font_ss_14_white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/btn_trans_with_border"
            android:minHeight="@dimen/space_45"
            android:text="@string/str_ok"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>